# formlets

./: LICENSE  README  formlets.cabal
Text/: Formlets.hs
Text/Blaze/Html5/: Formlets.hs
Text/Formlets/: FormResult.hs  MassInput.hs
Text/XHtml/Strict/: Formlets.hs
Text/XHtml/Transitional/: Formlets.hs
