Name:            formlets
Version:         0.6.1
Synopsis:        Formlets implemented in Haskell
Description:     A modular way to build forms based on applicative functors, as
                 described in:
                 .
                  * Ezra Cooper, Samuel Lindley, Philip Wadler and Jeremy Yallop
                    \"An idiom's guide to formlets\"
                    Technical Report, EDI-INF-RR-1263.
                    <http://groups.inf.ed.ac.uk/links/formlets/>
Category:        XML, Web, User Interfaces, Text
License:         BSD3
License-file:    LICENSE
Copyright:       (c) Jeremy Yallop / Tupil
Author:          Jeremy Yallop / Chris Eidhof
Homepage:        http://github.com/chriseidhof/formlets/tree/master
Maintainer:      Chris Eidhof <ce+hackage@tupil.com>
Build-Type:      Simple
Cabal-Version: >= 1.6
Extra-Source-Files: README

Library
  Build-Depends:   base >= 2 && < 5, 
                   haskell98, 
                   mtl, 
                   xhtml, 
                   applicative-extras >= 0.1.3, 
                   bytestring
  Exposed-Modules:   Text.Formlets
                   , Text.Formlets.MassInput
                   , Text.XHtml.Strict.Formlets
  Other-Modules:   Text.Formlets.FormResult
  


source-repository head
  type:     git
  location: git://github.com/chriseidhof/formlets.git
