Name:            formlets
Version:         0.7.2
Synopsis:        Formlets implemented in Haskell
Description:     A modular way to build forms based on applicative functors,
                 based on the work described in:
                 .
                  * Ezra Cooper, Samuel Lindley, Philip Wadler and Jeremy Yallop
                    \"An idiom's guide to formlets\"
                    Technical Report, EDI-INF-RR-1263.
                    <http://groups.inf.ed.ac.uk/links/formlets/>
Category:        XML, Web, User Interfaces, Text
License:         BSD3
License-file:    LICENSE
Homepage:        http://github.com/chriseidhof/formlets/tree/master
Maintainer:      Doug Beardsley <mightybyte@gmail.com>
Build-Type:      Simple
Cabal-Version: >= 1.6
Extra-Source-Files: README

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Library
  Build-Depends:   haskell98, 
                   mtl,
                   xhtml, 
                   applicative-extras >= 0.1.3, 
                   bytestring
  if flag(base4)
    Build-Depends: base >= 4 && < 5, syb
  else
    Build-Depends: base >= 2 && < 4
                                      
  Exposed-Modules:   Text.Formlets
                   , Text.Formlets.MassInput
                   , Text.XHtml.Strict.Formlets
                   , Text.XHtml.Transitional.Formlets
  Other-Modules:   Text.Formlets.FormResult
  


source-repository head
  type:     git
  location: git://github.com/chriseidhof/formlets.git
